# cool-seq-tool

./: .coveragerc  .env.shared  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Pipfile  Procfile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.ebextensions/: 00sample_log.config
.github/: CODEOWNERS
.github/workflows/: checks.yaml  checks.yml  github-actions.yml  pr-priority-label.yaml  release.yml  reusable-stale.yaml  stale.yaml
codebuild/: deploy_eb_env.py  deploy_eb_env_dev.py  terminate_eb_env.py  terminate_eb_env_dev.py
cool_seq_tool/: __init__.py  alignment_mapper.py  api.py  app.py  cool_seq_tool.py  main.py  mane_transcript.py  paths.py  schemas.py  utils.py  version.py
cool_seq_tool/data/: data_downloads.py  mane_transcript.ipynb
cool_seq_tool/data_sources/: __init__.py  alignment_mapper.py  feature_overlap.py  gene_normalizer.py  mane_transcript.py  mane_transcript_mappings.py  residue_mode.py  seqrepo_access.py  transcript_mappings.py  uta_database.py
cool_seq_tool/handlers/: __init__.py  seqrepo_access.py
cool_seq_tool/mappers/: __init__.py  alignment.py  exon_genomic_coords.py  liftover.py  mane_transcript.py
cool_seq_tool/routers/: __init__.py  default.py  mane.py  mappings.py
cool_seq_tool/sources/: __init__.py  mane_transcript_mappings.py  transcript_mappings.py  uta_database.py
cool_seq_tool/utils/: positions.py  validation.py
docs/: TranscriptSelectionPriority.md
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  install.rst  overview.rst  rest_service.rst  transcript_policy.rst  transcript_selection.rst  usage.rst
docs/source/_templates/: module_summary.rst
docs/source/api/: cool_seq_tool.rst  gene_normalizer.rst  index.rst  mane_transcript.rst  residue_mode.rst  seqrepo_access.rst  uta_database.rst
docs/source/data_sources/: gene_normalizer.rst  index.rst  seqrepo.rst  static_files.rst  uta.rst
docs/source/data_sources_api/: alignment_mapper.rst  index.rst  mane_transcript_mappings.rst  transcript_mappings.rst  uta_database.rst
docs/source/reference/: handlers.rst  index.rst  mappers.rst  sources.rst
src/cool_seq_tool/: __init__.py  api.py  app.py  exceptions.py  paths.py  schemas.py  utils.py  version.py
src/cool_seq_tool/data/: __init__.py  data_downloads.py
src/cool_seq_tool/handlers/: __init__.py  seqrepo_access.py
src/cool_seq_tool/mappers/: __init__.py  alignment.py  exon_genomic_coords.py  feature_overlap.py  liftover.py  mane_transcript.py
src/cool_seq_tool/resources/: __init__.py  data_files.py  resources.py  status.py
src/cool_seq_tool/routers/: __init__.py  default.py  mane.py  mappings.py
src/cool_seq_tool/sources/: __init__.py  mane_transcript_mappings.py  transcript_mappings.py  uta_database.py
tests/: conftest.py  test_utils.py
tests/handlers/: test_feature_overlap.py  test_seqrepo_access.py
tests/mappers/: test_alignment.py  test_exon_genomic_coords.py  test_liftover.py  test_mane_transcript.py
tests/sources/: test_mane_transcript_mappings.py  test_uta_database.py
tests/unit/: conftest.py  test_alignment_mapper.py  test_cool_seq_tool.py  test_feature_overlap.py  test_genomic_to_transcript.py  test_mane_transcript.py  test_mane_transcript_mappings.py  test_residue_mode.py  test_seqrepo_access.py  test_uta.py  test_uta_database.py  test_uta_queries.py  test_uta_tools.py
tests/unit/utils/: test_positions.py
uta_tools/: __init__.py  main.py  mane_transcript_mappings.py  schemas.py  seqrepo_access.py  transcript_mappings.py  uta.py  uta_tools.py  version.py
uta_tools/data/: __init__.py  data_downloads.py
uta_tools/data_sources/: __init__.py  gene_normalizer.py  mane_transcript.py  mane_transcript_mappings.py  residue_mode.py  seqrepo_access.py  transcript_mappings.py  uta_database.py
