[project]
name = "cool_seq_tool"
authors = [
    {name = "Kori Kuzma"},
    {name = "James Stevenson"},
    {name = "Katie Stahl"},
    {name = "Alex Wagner"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
description = "Common Operation on Lots of Sequences Tool"
license = {file = "LICENSE"}
dependencies = [
    "asyncpg",
    "boto3",
    "agct >= 0.2.0rc1",
    "polars ~= 1.0",
    "biocommons.seqrepo",
    "pydantic >=2.0,<3.0",
    "ga4gh.vrs >=2.2.0,<3.0",
    "wags-tails ~= 0.4.0",
    "bioutils",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "ipython",
    "ipykernel",
    "psycopg2-binary",
    "ruff==0.14.10",
]
tests = ["pytest", "pytest-cov", "pytest-asyncio", "mock"]
docs = [
    "sphinx==6.1.3",
    "sphinx-autodoc-typehints==1.22.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-copybutton==0.5.2",
    "sphinxext-opengraph==0.8.2",
    "furo==2023.3.27",
    "sphinx-github-changelog==1.2.1"
]

[project.urls]
Homepage = "https://github.com/genomicmedlab/cool-seq-tool"
Documentation = "https://coolseqtool.readthedocs.io/"
Changelog = "https://github.com/genomicmedlab/cool-seq-tool/releases"
Source = "https://github.com/genomicmedlab/cool-seq-tool"
"Bug Tracker" = "https://github.com/genomicmedlab/cool-seq-tool/issues"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# Scanning for namespace packages in the ``src`` directory is true by
# default in pyproject.toml, so you do NOT need to include the
# `tool.setuptools.packages.find` if it looks like the following:
# [tool.setuptools.packages.find]
# namespaces = true
# where = ["src"]

[tool.setuptools.package-data]
"cool_seq_tool.resources" = ["transcript_mapping.tsv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--cov=src --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.ruff]
src = ["src"]
exclude = ["docs/source/conf.py"]

[tool.ruff.lint]
ignore = [
    # unused
    "AIR",
    "ERA",
    "YTT",
    "BLE",
    "FBT",
    "CPY",
    "DJ",
    "EXE",
    "FIX",
    "FA",
    "PYI",
    "TD",
    "C90",
    "NPY",
    "PD",
    # ignore for compatibility with formatter
    "D206",
    "D300",
    "W191",
    "E111",
    "E114",
    "E117",
    "E501",
    "W191",
    "S321",
    "COM812",
    "COM819",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    # don't require types on *args, **kwargs
    "ANN002",
    "ANN003",
    # subjective pylint thresholds
    "PLR0904",
    "PLR091",
    "PLR1702",
    "PLC0206",
    # misc unnecessary stuff
    "S321",
    "D203",
    "D205",
    "D213",
    "D400",
    "D415",
]

[tool.ruff.lint.per-file-ignores]
# ANN001 - missing-type-function-argument
# ANN2 - missing-return-type
# N805 - invalid-first-argument-name-for-method
# F821 - undefined-name
# F401 - unused-import
# INP001 - implicit-namespace-package
# SLF001 - private-member-access
# ARG001 - unused-function-argument
"tests/*" = [
    "ANN001",
    "ANN2",
    "D",
    "S101",
    "INP001",
    "SLF001",
    "ARG001"
]
"*__init__.py" = ["F401"]
"src/cool_seq_tool/schemas.py" = ["ANN201", "N805", "ANN001"]

[tool.ruff.format]
docstring-code-format = true
