[metadata]
name = uta_tools
description = Service for querying the biocommons.uta database
long_description = file:README.md
long_description_content_type = text/markdown
author = Wagner Lab, Nationwide Childrens Hospital
home_page = https://github.com/cancervariants/uta_tools
license = MIT

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True
install_requires =
    asyncpg
    aiofiles
    boto3
    pyliftover
    pandas
    hgvs
    biocommons.seqrepo
    pydantic
    botocore

tests_require =
    pytest
    pytest-cov
    pytest-asyncio

[options.package_data]
uta_tools =
    data/transcript_mapping.tsv

[tool:pytest]
addopts = --ignore setup.py --doctest-modules --cov-report term-missing --disable-warnings --cov .
