[metadata]
name = cool_seq_tool
description = Common Operations On Lots-of Sequences Tool.
long_description = file:README.md
long_description_content_type = text/markdown
author = Wagner Lab, Nationwide Childrens Hospital
home_page = https://github.com/GenomicMedLab/cool-seq-tool
license = MIT

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True
install_requires =
    asyncpg
    aiofiles
    boto3
    pyliftover
    pandas
    hgvs
    biocommons.seqrepo
    pydantic
    uvicorn
    fastapi
    gene-normalizer >=0.1.34, != 0.2.0, != 0.2.1, != 0.2.2, != 0.2.3, != 0.2.4, != 0.2.5, != 0.2.6, != 0.2.7, != 0.2.8
    ga4gh.vrs
    apybiomart

[options.package_data]
cool_seq_tool =
    data/transcript_mapping.tsv

[options.extras_require]
dev =
    pre-commit
    flake8
    flake8-docstrings
    flake8-annotations
    flake8-quotes
    flake8-import-order
    ipython
    ipykernel
    psycopg2-binary

tests =
    pytest
    pytest-cov
    pytest-asyncio == 0.18.3
    mock

docs =
    sphinx == 6.1.3
    sphinx-autodoc-typehints == 1.22.0
    sphinx-copybutton == 0.5.2
    sphinxext-opengraph == 0.8.2
    furo == 2023.3.27


[tool:pytest]
addopts = --ignore setup.py --ignore codebuild/ --doctest-modules --cov-report term-missing --disable-warnings --cov .
